src/test/deca/context/valid/created/avec_objet/rule2.3/2.3.deca
// Test pour la règle 2.3
// Date: 18/01/2024
// Auteur: Jerome

// Classe de base
class ClasseDeBase {
    int attributDeBase;

    void methodeDeBase() {
        println("Méthode dans ClasseDeBase.");
    }
}

// Classe dérivée
class ClasseDerivee extends ClasseDeBase {
    int attributDerive;

    void methodeDerivee() {
        println("Méthode dans ClasseDerivee.");
    }

    void utiliserBase() {
        this.methodeDeBase();
        attributDeBase = 5;
    }
}

class Test {
    void testMethod() {
        ClasseDerivee objDerive = new ClasseDerivee();
        objDerive.utiliserBase();
        objDerive.methodeDerivee();
    }
}

// Programme principal
{
    Test testProgramme = new Test();
    testProgramme.testMethod();
}
