src/test/deca/context/invalid/created/rule3.29/inwhile.deca
// Résultat erreur:
//    16:15
//    Condition non booléenne dans 'while' (règle 3.29)
//
// Description:
//    Tests de programme incorrect contextuellement (condition 'while' non booléenne)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    void maMethode() {
        int x = 5;
        while (x) { 
            
        }
    }
}
